Sun, 9 Jan 2022 18:09:46 -0700 Christian J. Robinson
 * Fix permissions

Sun, 9 Jan 2022 18:02:30 -0700 Christian J. Robinson
 * Update version and copyright years

Sun, 9 Jan 2022 18:00:01 -0700 Christian J. Robinson
 * Change html*.json to just *.json

Thu, 6 Jan 2022 15:26:48 -0700 Christian J. Robinson
 * Update README copyright info

Thu, 6 Jan 2022 15:23:06 -0700 Christian J. Robinson
 * Update version file

Thu, 6 Jan 2022 15:22:37 -0700 Christian J. Robinson
 * Use new import syntax

Sat, 25 Sep 2021 13:33:07 -0600 Christian J. Robinson
 * Tweaks, speed improvements, some plugin commands are now local to the buffer.

Thu, 2 Sep 2021 22:23:14 -0600 Christian J. Robinson
 * Support Brave browser. Image tag WIDTHxHEIGHT updater supports more image types.

Sun, 29 Aug 2021 14:06:45 -0600 Christian J. Robinson
 * Some bugs fixed. Some refactoring. Minor feature additions.

Fri, 20 Aug 2021 22:11:03 -0600 Christian J. Robinson
 * Fixed a bug that crept in while trying to fix other bugs. Code tweaks.

Tue, 17 Aug 2021 22:11:59 -0600 Christian J. Robinson
 * Update version number

Tue, 17 Aug 2021 22:07:54 -0600 Christian J. Robinson
 * Fix more bugs. Simplify some code.

Sun, 15 Aug 2021 22:35:31 -0600 Christian J. Robinson
 * Loading bug fixed. More entities. Moved config variables to a unified dictionary.

Fri, 13 Aug 2021 23:23:58 -0600 Christian J. Robinson
 * MOre bugs were found and squashed. Moved more data to json.

Thu, 12 Aug 2021 19:35:13 -0600 Christian J. Robinson
 * Some bugs crept in during the change over to json. Code improvements.

Wed, 11 Aug 2021 22:30:54 -0600 Christian J. Robinson
 * Fixed a serious bug loading the entities. Also load the tag mappings and menus via json.

Wed, 11 Aug 2021 00:52:12 -0600 Christian J. Robinson
 * Remove unused code. Make defining HTML entities with menus easier. Add an about command.

Mon, 9 Aug 2021 22:25:00 -0600 Christian J. Robinson